BugFix - popup channels lists labels more then one/ two it's start to overflow in a bad way. I just patched it with y scroll.

--- a/extension/src/popup/popup.css
+++ b/extension/src/popup/popup.css
@@ -175,7 +175,14 @@ header {
   
 }
 
+.channels-list-container {
+  max-width: 300px;
+  max-height: 22px;
+  overflow-y: auto;
+}
+
 .channels-list-label {
+  max-height: 22px;
   margin: 0px 4px;
   background-color: var(--lightGreyBG);
   padding: 3px 4px 3px 7px;
